# cal-killer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  Dockerfile  Makefile  README.md  main.tsp  package-lock.json  package.json  tspconfig.yaml
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_table.py  0002_create_schedules_tables.py  5048efb812ef_create_event_types_table.py  b4008104fbae_create_bookings_and_attendees_tables.py
backend/app/: config.py  main.py
backend/app/auth/: deps.py  jwt.py  models.py  router.py  service.py
backend/app/core/: errors.py  pagination.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  booking.py  event_type.py  schedule.py  user.py
backend/app/features/bookings/: __init__.py  router.py  schemas.py  service.py
backend/app/features/event_types/: __init__.py  router.py  schemas.py  service.py
backend/app/features/public/: __init__.py  router.py  schemas.py  service.py  slots.py
backend/app/features/schedules/: __init__.py  router.py  schemas.py  service.py
backend/app/features/users/: __init__.py  router.py  schemas.py  service.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_bookings.py  test_contract_match.py  test_event_types.py  test_public.py  test_schedules.py  test_users.py
frontend/: .env.example  .gitignore  index.html  orval.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+35 files in other folders)
