[project]
name = "cal-killer-backend"
version = "0.1.0"
description = "Cal Killer backend — FastAPI implementation of the TypeSpec contract."
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy>=2",
    "alembic",
    "pydantic>=2",
    "pydantic-settings",
    "passlib[bcrypt]",
    "bcrypt",
    "pyjwt",
    "python-multipart",
]

[dependency-groups]
dev = [
    "pytest",
    "httpx",
    "ruff",
    "pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# B008: FastAPI's `Depends(...)` / `Query(...)` in argument defaults is idiomatic.
# UP046: keep `Generic[T]` subclass form for broader pydantic version compat.
ignore = ["E501", "B008", "UP046"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
